--- a/flujopago/Views/Base.lproj/Main.storyboard
+++ b/flujopago/Views/Base.lproj/Main.storyboard
@@ -142,34 +142,43 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nf0-dz-a1w">
-                                <rect key="frame" x="154" y="557" width="67" height="30"/>
-                                <state key="normal" title="Continuar"/>
-                                <connections>
-                                    <action selector="toPayMethods:" destination="BYZ-38-t0r" eventType="touchUpInside" id="rsA-uO-anZ"/>
-                                </connections>
-                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Paso 1" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Utq-vj-FFa">
                                 <rect key="frame" x="161" y="157" width="52" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="18"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="IEi-rt-8eh">
+                                <rect key="frame" x="50" y="557" width="61" height="30"/>
+                                <state key="normal" title="Cancelar"/>
+                                <connections>
+                                    <action selector="cancel:" destination="BYZ-38-t0r" eventType="touchUpInside" id="bkj-O3-z8A"/>
+                                </connections>
+                            </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nf0-dz-a1w">
+                                <rect key="frame" x="258" y="557" width="67" height="30"/>
+                                <state key="normal" title="Continuar"/>
+                                <connections>
+                                    <action selector="toPayMethods:" destination="BYZ-38-t0r" eventType="touchUpInside" id="rsA-uO-anZ"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="Utq-vj-FFa" firstAttribute="top" secondItem="AEU-dX-mX7" secondAttribute="bottom" constant="30" id="M2m-Xl-eZb"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="IEi-rt-8eh" secondAttribute="bottom" constant="80" id="PO2-p0-K9u"/>
                             <constraint firstItem="Utq-vj-FFa" firstAttribute="centerX" secondItem="AEU-dX-mX7" secondAttribute="centerX" id="TTl-7J-RSY"/>
                             <constraint firstItem="sLE-P1-G8N" firstAttribute="top" secondItem="Utq-vj-FFa" secondAttribute="bottom" constant="20" id="YBn-Ns-YtO"/>
                             <constraint firstItem="AEU-dX-mX7" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="cqu-dM-5ly"/>
                             <constraint firstItem="sLE-P1-G8N" firstAttribute="centerX" secondItem="Utq-vj-FFa" secondAttribute="centerX" id="dO3-e9-bIh"/>
+                            <constraint firstItem="IEi-rt-8eh" firstAttribute="leading" secondItem="0d1-Of-i2X" secondAttribute="leading" id="eHG-Lh-lxi"/>
                             <constraint firstItem="0d1-Of-i2X" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="hKG-ye-UNz"/>
                             <constraint firstItem="0d1-Of-i2X" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="50" id="hbE-Pt-isA"/>
                             <constraint firstItem="sLE-P1-G8N" firstAttribute="centerX" secondItem="AEU-dX-mX7" secondAttribute="centerX" id="jX0-6E-bqT"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="0d1-Of-i2X" secondAttribute="trailing" constant="50" id="l1h-ua-Oj3"/>
+                            <constraint firstItem="nf0-dz-a1w" firstAttribute="trailing" secondItem="0d1-Of-i2X" secondAttribute="trailing" id="o5a-RW-tPH"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="nf0-dz-a1w" secondAttribute="bottom" constant="80" id="puq-SS-2Zz"/>
                             <constraint firstItem="AEU-dX-mX7" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="36" id="tID-6z-BVl"/>
-                            <constraint firstItem="nf0-dz-a1w" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="yU3-lA-sUI"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
